DX-43 Доработана система сокетов, а также улучшен модуль интеграций с внешними системами